# Viruscanner

./: .gitignore  README.md  package.json  tsconfig.app.json
.cargo/: config.toml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  scanner.rs
src/bindings/: CloudLookupResult.ts  CloudStatus.ts  CloudVerdict.ts  CompromiseCheckSuite.ts  CompromiseTarget.ts  CompromiseTargetGroup.ts  ContentClassification.ts  EngineStatus.ts  ExecutableMetadata.ts  Finding.ts  HashSignatureMatch.ts  PackerDetection.ts  ScanEvent.ts  ScanFileResult.ts  ScanOptions.ts  ScanSummary.ts  ScanVerdict.ts  StartScanResponse.ts  StaticAnalysis.ts  WindowsFileAttributes.ts
src/components/: app-sidebar.tsx  nav-main.tsx  nav-secondary.tsx
src/lib/: desktop-ipc.ts
