[package]
name = "virus-scanner"
version = "0.1.0"
description = "Report-only Tauri virus scanner MVP"
authors = ["kevin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "virus_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri-plugin-log = "2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.49.0", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "12.0", features = ["serde-compat"] }
yara-x = "1.19.0"
scanbridge = { version = "0.3.0", default-features = false, features = ["tokio-runtime", "sha2"] }
magika = "1.1.0"
ort = "=2.0.0-rc.12"
mimalloc = "0.1.52"
blake3 = "1.8.5"
sha2 = "0.11.0"
object = "0.39.1"
memmap2 = "0.9.11"
walkdir = "2.5.0"
rayon = "1.12.0"
zip = "8.6.0"
tar = "0.4.46"
flate2 = "1.1.9"
thiserror = "2.0.18"
tracing = "0.1.44"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls", "system-proxy"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
rstest = "0.26.1"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
